--- a/index.html
+++ b/index.html
@@ -1,54 +1,81 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Commitment - Iron Dillo Cybersecurity</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet" />
+<meta charset="UTF-8" />
+<title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
+<meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" href="/assets/favicon.ico" />
+<script src="https://cdn.tailwindcss.com"></script>
+<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<style>
+@keyframes fadeIn {
+from { opacity: 0; }
+to { opacity: 1; }
+}
+.fade-in {
+animation: fadeIn 1.2s ease-out both;
+}
+</style>
 </head>
-<body class="bg-gray-50 flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Main content -->
-  <main class="flex-grow">
-    <header class="bg-white shadow">
-      <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold text-gray-900">Our Commitment</h1>
-      </div>
-    </header>
+<!-- Header with logo, title, and navigation -->
+<header class="p-8 text-center max-w-3xl mx-auto fade-in">
+<img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
+<h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
 
-    <section class="max-w-4xl mx-auto p-6 bg-white rounded-lg shadow-md mt-10 text-gray-800">
-      <p class="mb-4">
-        At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting services with your best interests in mind.
-      </p>
-      <ul class="list-disc list-inside space-y-3 mb-6">
-        <li><strong>Operating Status:</strong> I currently operate as an individual consultant and am working toward forming a registered business entity.</li>
-        <li><strong>Client Consent:</strong> No security assessments or testing will be performed without your explicit permission.</li>
-        <li><strong>Confidentiality:</strong> Your data and privacy are treated with the highest respect and protected under a strict confidentiality agreement.</li>
-        <li><strong>Scope & Limitations:</strong> I provide practical recommendations and risk mitigation but cannot guarantee complete immunity from cyber threats.</li>
-        <li><strong>Billing Transparency:</strong> All fees and deliverables will be clearly outlined in advance and invoiced accurately.</li>
-        <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
-      </ul>
-      <p>
-        Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
-      </p>
-    </section>
-  </main>
+<!-- Navigation right below the title -->
+<nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+<div class="flex justify-between">
+<a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+<a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+<a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+<a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+<a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+<a href="/commitment.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Our Commitment</a>
+</div>
+</nav>
 
-  <!-- Footer -->
-  <footer class="bg-white border-t border-gray-200 mt-12">
-    <div class="max-w-7xl mx-auto px-4 py-6 flex flex-col sm:flex-row justify-between items-center text-gray-600 text-sm">
-      <nav class="mb-4 sm:mb-0 space-x-4">
-        <a href="about.html" class="hover:text-gray-900">About</a>
-        <a href="services.html" class="hover:text-gray-900">Services</a>
-        <a href="blog.html" class="hover:text-gray-900">Blog</a>
-        <a href="contact.html" class="hover:text-gray-900">Contact</a>
-        <a href="privacy.html" class="hover:text-gray-900">Privacy Policy</a>
-        <a href="terms.html" class="hover:text-gray-900">Terms of Service</a>
-        <a href="commitment.html" class="hover:text-gray-900 font-semibold">Our Commitment</a>
-      </nav>
-      <p>&copy; 2025 Iron Dillo Cybersecurity. All rights reserved.</p>
-    </div>
-  </footer>
+<p class="text-lg leading-relaxed max-w-xl mx-auto text-gray-300">
+      <span class="block mb-2">
+        <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
+        <span class="font-semibold text-white">individuals</span>,
+        <span class="font-semibold text-white">small businesses</span>,
+        and <span class="font-semibold text-white">rural operations</span> —
+        including farms, ranches, and independent shops.
+      </span>
+      <span class="block">
+        <span class="text-teal-400 font-medium">Veteran-owned</span> and mission-driven,
+        we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
+        <em class="italic text-gray-400">Digital defense with Texas grit.</em>
+      </span>
+      Iron Dillo Cybersecurity provides practical cybersecurity support for individuals, small businesses, and rural operations including farms, ranches, and independent shops.  
+      As a veteran-owned business, I focus on thorough diagnostics, clear documentation, and straightforward guidance.  
+      If you want honest, no-nonsense help with your digital security, you’re in the right place.
+</p>
+
+</header>
+
+<!-- Social icons -->
+<section class="fade-in max-w-3xl mx-auto mb-8 text-center">
+  <p class="text-teal-400 font-semibold mb-2">Connect with me</p>
+  <div class="flex justify-center">
+    <a href="https://github.com/Artilleryjoe" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300">
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 text-teal-400 hover:text-white" viewBox="0 0 24 24" fill="currentColor">
+        <path d="M12 0.5C5.73 0.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
+      </svg>
+    </a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+&copy; 2025 Iron Dillo. All rights reserved. | 
+<a href="/privacy.html" class="hover:underline">Privacy</a> | 
+<a href="/terms.html" class="hover:underline">Terms</a> | 
+<a href="/commitment.html" class="hover:underline">Our Commitment</a>
+</footer>
 
 </body>
 </html>
