--- a/commitment.html
+++ b/commitment.html
@@ -2,26 +2,42 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our Commitment - Iron Dillo Cybersecurity</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet" />
+  <title>Our Commitment – Iron Dillo</title>
+  <meta name="description" content="Iron Dillo Cybersecurity’s commitment to integrity, transparency, and client trust." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <link rel="canonical" href="https://irondillo.com/commitment.html" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 flex flex-col min-h-screen text-gray-900 font-sans">
 
-  <!-- Main content -->
-  <main class="flex-grow max-w-4xl mx-auto p-8">
-    <header class="mb-8">
-      <h1 class="text-4xl font-extrabold text-teal-600">Our Commitment</h1>
-      <p class="mt-2 text-gray-700">
-        At Iron Dillo Cybersecurity, integrity and transparency guide everything we do.
-      </p>
-    </header>
+<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-    <section class="bg-white p-8 rounded-lg shadow-md space-y-6 text-gray-800">
-      <p>
-        As a sole proprietor, I provide personalized cybersecurity consulting services with your best interests in mind.
+  <!-- Logo Header -->
+  <header class="text-center pt-8">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
+  </header>
+
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
+      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="flex-grow max-w-3xl mx-auto px-6 py-12">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-gray-300">
+      <h1 class="text-3xl font-extrabold text-teal-400 mb-6">Our Commitment</h1>
+
+      <p class="mb-6">
+        At Iron Dillo Cybersecurity, integrity and transparency guide everything we do. As a sole proprietor, I provide personalized cybersecurity consulting with your best interests in mind.
       </p>
-      <ul class="list-disc list-inside space-y-4">
+
+      <ul class="list-disc list-inside space-y-4 mb-6">
         <li><strong>Operating Status:</strong> I currently operate as an individual consultant and am working toward forming a registered business entity.</li>
         <li><strong>Client Consent:</strong> No security assessments or testing will be performed without your explicit permission.</li>
         <li><strong>Confidentiality:</strong> Your data and privacy are treated with the highest respect and protected under a strict confidentiality agreement.</li>
@@ -29,6 +45,7 @@
         <li><strong>Billing Transparency:</strong> All fees and deliverables will be clearly outlined in advance and invoiced accurately.</li>
         <li><strong>Legal Compliance:</strong> All work follows applicable laws and ethical standards in cybersecurity consulting.</li>
       </ul>
+
       <p>
         Thank you for trusting Iron Dillo Cybersecurity to help protect your digital assets.
       </p>
@@ -36,8 +53,10 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-100 border-t border-gray-300 mt-12 py-6 text-center text-gray-600 text-sm max-w-4xl mx-auto rounded-md">
-    &copy; 2025 Iron Dillo Cybersecurity. All rights reserved.
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
