--- a/index.html
+++ b/index.html
@@ -1,93 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-<meta charset="UTF-8" />
-<title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
-<meta name="description" content="Iron Dillo Cybersecurity provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" href="/assets/favicon.ico" />
-<script src="https://cdn.tailwindcss.com"></script>
-<script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-<style>
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-.fade-in {
-  animation: fadeIn 1.2s ease-out both;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Iron Dillo Cybersecurity</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
+<body class="bg-gray-900 text-white font-sans overflow-x-hidden">
 
-  <div class="w-full max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col min-h-screen">
+  <!-- Container -->
+  <div class="min-h-screen flex flex-col items-center justify-between px-4">
 
-    <!-- Header with logo, title, and navigation -->
-    <header class="p-8 text-center fade-in">
-      <img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
-      <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
-
-      <!-- Navigation right below the title -->
-      <nav class="bg-gray-800 py-3 rounded-md mb-8">
-        <div class="flex justify-between">
-          <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-          <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-          <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-          <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
-          <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
-        </div>
-      </nav>
-
-      <p class="text-lg leading-relaxed text-gray-300">
-        <span class="block mb-2">
-          <span class="text-teal-400 font-medium">Iron Dillo Cybersecurity</span> delivers hands-on protection for
-          <span class="font-semibold text-white">individuals</span>, 
-          <span class="font-semibold text-white">small businesses</span>, and 
-          <span class="font-semibold text-white">rural operations</span> — including farms, ranches, and independent shops.
-        </span>
-        <span class="block mb-2">
-          As a <span class="text-teal-400 font-medium">veteran-owned</span>, mission-driven business, we provide remote diagnostics, documentation, and guidance you can <span class="font-semibold text-white">trust</span>.
-        </span>
-        <em class="italic text-gray-400">Digital defense with Texas grit.</em>
-      </p>
+    <!-- Logo -->
+    <header class="w-full py-6 text-center">
+      <img src="/assets/IronDilloLogo.png" alt="Iron Dillo Logo" class="mx-auto w-32 h-auto mb-4" />
+      <h1 class="text-3xl font-bold text-teal-400">Iron Dillo Cybersecurity</h1>
     </header>
 
-    <!-- Social icons -->
-    <section class="fade-in mb-8 text-center">
-      <p class="text-teal-400 font-semibold mb-2">Connect with me</p>
-      <div class="inline-flex justify-center space-x-10">
-        <!-- GitHub -->
-        <a href="https://github.com/Artilleryjoe" target="_blank" aria-label="GitHub" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 0.5C5.73 0.5.5 5.73.5 12.02c0 5.1 3.29 9.42 7.86 10.96.58.1.79-.25.79-.56v-2.2c-3.2.7-3.87-1.54-3.87-1.54-.53-1.35-1.3-1.71-1.3-1.71-1.06-.73.08-.72.08-.72 1.17.08 1.79 1.2 1.79 1.2 1.04 1.78 2.73 1.27 3.4.97.1-.75.4-1.27.72-1.56-2.56-.3-5.26-1.28-5.26-5.7 0-1.26.45-2.3 1.2-3.12-.12-.3-.52-1.52.11-3.17 0 0 .97-.31 3.18 1.2a11.07 11.07 0 0 1 2.9-.39c.99 0 1.98.13 2.9.39 2.21-1.51 3.18-1.2 3.18-1.2.63 1.65.24 2.87.12 3.17.75.82 1.2 1.86 1.2 3.12 0 4.43-2.7 5.4-5.27 5.7.41.35.77 1.04.77 2.1v3.12c0 .31.21.67.8.56A10.5 10.5 0 0 0 23.5 12C23.5 5.73 18.27.5 12 .5Z"/>
-          </svg>
-        </a>
-
-        <!-- Facebook -->
-        <a href="https://www.facebook.com/profile.php?id=61578181152347" target="_blank" aria-label="Facebook" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
-          </svg>
-        </a>
-
-        <!-- LinkedIn -->
-        <a href="https://linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37 4.271 5.452v6.291zM5.337 7.433c-1.144 0-2.07-.927-2.07-2.07 0-1.144.926-2.07 2.07-2.07 1.143 0 2.07.926 2.07 2.07 0 1.143-.927 2.07-2.07 2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .792 0 1.77v20.451C0 23.207.792 24 1.77 24h20.451C23.208 24 24 23.207 24 22.222V1.77C24 .792 23.208 0 22.225 0z"/>
-          </svg>
-        </a>
+    <!-- Navigation -->
+    <nav class="w-full bg-gray-800 rounded-md py-3 mb-8">
+      <div class="flex flex-wrap justify-center gap-4 px-4">
+        <a href="/index.html" class="text-teal-400 font-medium hover:underline uppercase">Home</a>
+        <a href="/services.html" class="text-teal-400 font-medium hover:underline uppercase">Services</a>
+        <a href="/about.html" class="text-teal-400 font-medium hover:underline uppercase">About</a>
+        <a href="/blog.html" class="text-teal-400 font-medium hover:underline uppercase">Blog</a>
+        <a href="/contact.html" class="text-teal-400 font-medium hover:underline uppercase">Contact</a>
       </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="flex-1 w-full max-w-3xl text-center mb-10">
+      <h2 class="text-2xl md:text-3xl font-semibold mb-4 text-white">
+        Practical Cybersecurity for East Texas Businesses
+      </h2>
+      <p class="text-gray-300 mb-6">
+        Iron Dillo offers clear, affordable cybersecurity help for small businesses, churches, and individuals. 
+        No jargon. No upsells. Just results.
+      </p>
+      <a href="/services.html" class="inline-block px-6 py-3 bg-teal-500 hover:bg-teal-600 text-white font-semibold rounded-lg transition">
+        View Services
+      </a>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm rounded-md">
-      &copy; 2025 Iron Dillo. All rights reserved. | 
-      <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-      <a href="/terms.html" class="hover:underline">Terms</a> | 
-      <a href="/commitment.html" class="hover:underline">Our Commitment</a>
+    <footer class="w-full text-center border-t border-gray-700 py-4 mt-6">
+      <div class="flex justify-center gap-6 items-center">
+        <a href="https://github.com/Artilleryjoe" target="_blank" rel="noopener" aria-label="GitHub">
+          <img src="/assets/github-icon.svg" alt="GitHub" class="w-6 h-6" />
+        </a>
+        <a href="https://www.linkedin.com/in/artilleryjoe" target="_blank" rel="noopener" aria-label="LinkedIn">
+          <img src="/assets/linkedin-icon.svg" alt="LinkedIn" class="w-6 h-6" />
+        </a>
+      </div>
+      <p class="text-xs text-gray-500 mt-2">© 2025 Iron Dillo Cybersecurity. Built in East Texas.</p>
     </footer>
 
   </div>
-
 </body>
 </html>
