--- a/404.html
+++ b/404.html
@@ -4,7 +4,18 @@
   <meta charset="UTF-8" />
   <title>404 – Page Not Found | IronDillo</title>
   <meta name="description" content="Uh-oh. This burrow doesn’t exist. Let’s get you back to safety.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- 🛡 Security Headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'none';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Permissions-Policy" content="accelerometer=(), camera=(), geolocation=(), microphone=()">
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
   <style>
     body {
       background: #f4e1c1;
@@ -41,13 +52,9 @@
 </head>
 
 <body>
-
   <img src="/assets/404Dillo.png" alt="Dizzy Armadillo - Couldn't Find This Burrow">
-
   <h1>404 – Couldn't Find This Burrow</h1>
   <p>Looks like the page you're digging for doesn't exist. Maybe it got buried, maybe it never existed at all. No worries—Iron Dillo is on the trail.</p>
-
   <a href="/index.html">Back to Safety</a>
-
 </body>
 </html>
