--- a/contact.html
+++ b/contact.html
@@ -1,119 +1,98 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
-  <title>Contact | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Contact Iron Dillo Cybersecurity for trusted cybersecurity consulting for individuals and small businesses in East Texas and rural communities." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <title>Contact | Iron Dillo Cybersecurity</title>
+  
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <style>
-    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-    .fade-in { animation: fadeIn 1s ease-out both; }
-  </style>
 </head>
-<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex items-center justify-center p-4">
 
-  <!-- Logo Header -->
-  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-  </header>
+  <main class="max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg">
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-6 text-center">Contact Iron Dillo</h1>
+    <p class="text-gray-300 mb-8 text-center">Have a cybersecurity question? Want to schedule a consult? Reach out below and we’ll get back to you soon.</p>
 
-  <!-- Navigation -->
-  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
-    <div class="flex justify-between">
-      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
-      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
-    </div>
-  </nav>
+    <form
+      id="contact-form"
+      action="https://formspree.io/f/xldnbpdg"
+      method="POST"
+      class="space-y-6"
+      onsubmit="return onSubmit(event)"
+    >
+      <!-- Honeypot Field (hidden from humans) -->
+      <div style="display:none;">
+        <label for="gotcha">Leave this empty</label>
+        <input type="text" name="_gotcha" id="gotcha" autocomplete="off" />
+      </div>
 
-  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-8 fade-in">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h1 class="text-4xl font-extrabold text-teal-400 mb-6">Contact Iron Dillo</h1>
-      <p class="text-gray-300 leading-relaxed mb-6">
-        Have a cybersecurity question? Want to schedule a consult? Reach out below and we’ll get back to you soon.
-      </p>
+      <div>
+        <label for="name" class="block mb-2 font-semibold text-teal-400">Your Name</label>
+        <input
+          type="text"
+          name="name"
+          id="name"
+          required
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          placeholder="Jane Doe"
+          autocomplete="name"
+        />
+      </div>
 
-      <form
-        id="contact-form"
-        action="https://formspree.io/f/xldnbpdg"
-        method="POST"
-        class="space-y-6 g-recaptcha"
-        data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"
-        data-callback="onSubmit"
-        data-size="invisible"
+      <div>
+        <label for="email" class="block mb-2 font-semibold text-teal-400">Your Email</label>
+        <input
+          type="email"
+          name="_replyto"
+          id="email"
+          required
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          placeholder="you@example.com"
+          autocomplete="email"
+        />
+      </div>
+
+      <div>
+        <label for="message" class="block mb-2 font-semibold text-teal-400">Message</label>
+        <textarea
+          name="message"
+          id="message"
+          rows="5"
+          required
+          class="w-full p-3 rounded bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          placeholder="Write your message here..."
+        ></textarea>
+      </div>
+
+      <!-- Google reCAPTCHA v2 Checkbox widget -->
+      <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb
+"></div>
+
+      <button
+        type="submit"
+        class="w-full bg-teal-400 text-gray-900 font-extrabold py-3 rounded hover:bg-teal-500 transition-colors duration-200"
       >
-        <!-- Honeypot Field - Invisible to humans -->
-        <div style="display:none;">
-          <label for="phone">Leave this empty</label>
-          <input type="text" name="phone" id="phone" autocomplete="off" />
-        </div>
-
-        <div>
-          <label for="name" class="block text-teal-400 font-semibold mb-2">Your Name</label>
-          <input type="text" name="name" id="name" required autocomplete="name" 
-            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400" />
-        </div>
-
-        <div>
-          <label for="email" class="block text-teal-400 font-semibold mb-2">Your Email</label>
-          <input type="email" name="_replyto" id="email" required autocomplete="email" 
-            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400" />
-        </div>
-
-        <div>
-          <label for="message" class="block text-teal-400 font-semibold mb-2">Message</label>
-          <textarea name="message" id="message" rows="6" required 
-            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"></textarea>
-        </div>
-
-        <button type="submit" 
-          class="bg-teal-400 text-gray-900 font-extrabold px-6 py-3 rounded-md hover:bg-teal-500 transition-colors duration-200">
-          Send Message
-        </button>
-      </form>
-    </section>
+        Send Message
+      </button>
+    </form>
   </main>
 
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm max-w-3xl mx-auto rounded-md fade-in">
-    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
-  </footer>
-
   <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById("contact-form");
-    const button = form.querySelector("button[type=submit]");
+    // Prevent form submit if reCAPTCHA not verified
+    function onSubmit(event) {
+      const recaptchaResponse = grecaptcha.getResponse();
+      if (recaptchaResponse.length === 0) {
+        alert("Please verify you are not a robot.");
+        event.preventDefault();
+        return false;
+      }
+      return true;
+    }
+  </script>
 
-    button.addEventListener("click", function (e) {
-      e.preventDefault(); // Stop form from submitting immediately
-      grecaptcha.execute();
-      <script>
-function submitForm() {
-  grecaptcha.execute();
-}
-
-function onSubmit(token) {
-  document.getElementById("contact-form").submit();
-}<script>
-document.addEventListener("DOMContentLoaded", function () {
-  const form = document.getElementById("contact-form");
-  const button = form.querySelector("button[type=submit]");
-
-  button.addEventListener("click", function (e) {
-    e.preventDefault(); // Prevent normal form submission
-    grecaptcha.execute(); // Trigger invisible reCAPTCHA
-  });
-});
-
-// This function is called by reCAPTCHA after the user passes the challenge
-function onSubmit(token) {
-  document.getElementById("contact-form").submit();
-}
-</script>
-
+</body>
+</html>
