--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ animation: fadeIn 1.2s ease-out both;
         <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.325 24h11.494v-9.294H9.692v-3.622h3.127V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.466.099 2.797.143v3.24l-1.918.001c-1.504 0-1.796.716-1.796 1.765v2.315h3.59l-.467 3.622h-3.123V24h6.116C23.4 24 24 23.4 24 22.675V1.342C24 .6 23.4 0 22.675 0z"/>
       </svg>
     </a>
-    <a href="www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
+    <a href="https://www.linkedin.com/in/kristophermccoy" target="_blank" aria-label="LinkedIn" class="hover:scale-110 transition-transform duration-300 text-teal-400 hover:text-white">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" viewBox="0 0 24 24" fill="currentColor">
         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.025-3.037-1.852-3.037-1.854 0-2.137 1.445-2.137 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.604 0 4.271 2.37 4.271 5.452v6.291zM5.337 7.433c-1.144 0-2.07-.927-2.07-2.07 0-1.144.926-2.07 2.07-2.07 1.143 0 2.07.926 2.07 2.07 0 1.143-.927 2.07-2.07 2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .792 0 1.77v20.451C0 23.207.792 24 1.77 24h20.451C23.208 24 24 23.207 24 22.222V1.77C24 .792 23.208 0 22.225 0z"/>
       </svg>
